--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,800;1,400&display=swap');
 
 :root {
   --container_width: 980px;
@@ -101,6 +101,46 @@ slider {
   background-image: url('./img/slider.jpg');
   background-size: cover;
   background-position: center;
+}
+
+content {
+  display: flex;
+  justify-content: center;
+}
+
+.content__container {
+  margin-top: 44px;
+  min-width: var(--container_width);
+  display: flex;
+  justify-content: space-between;
+  gap: 53px;
+}
+
+.content__aside {
+  max-width: 340px;
+  width: 100%;
+  color: white;
+  background-color: var(--gray-main);
+  padding: 16px 31px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.content__aside h2 {
+  font-size: 40px;
+  line-height: 46px;
+  font-weight: 600;
+}
+
+.aside__date {
+  font-style: italic;
+}
+
+.aside_link {
+  color: white;
+  align-self: flex-end;
+  margin: 47px 25px 19px 0;
 }
 
 footer {
